--- a/education.html
+++ b/education.html
@@ -37,7 +37,7 @@
             <td>84</td>
         </tr>
     </table><br><br>
-    <a href="resume.html">Previous</a>&nbsp;&nbsp;&nbsp;
-    <a href="personal_info.html">Next</a>
+    <!-- <a href="resume.html">Previous</a>&nbsp;&nbsp;&nbsp;
+    <a href="personal_info.html">Next</a> -->
 </body>
 </html>
