--- a/frameset.html
+++ b/frameset.html
@@ -24,7 +24,7 @@
 <body style="margin:0; height:100vh; display:flex;">
 
   <iframe src="links.html" style="width:25%; height:100%; "></iframe>
-  <iframe src="index.html" style="width:75%; height:100%; " name="frame1"></iframe>
+  <iframe src="resume.html" style="width:75%; height:100%; " name="frame1"></iframe>
 
 </body>
 </html>
