--- a/links.html
+++ b/links.html
@@ -7,11 +7,10 @@
 </head>
 <body>
 <ul>
-    <li>    <a href="personal_info.html" target="frame1">personal info</a>
-
-</li>
-<li><a href="index.html" target="frame1">Website and webserver</a></li>
+    
+<li><a href="resume.html" target="frame1">Resume</a></li>
 <li><a href="education.html" target="frame1">Educational Qualification</a></li>
+<li><a href="personal_info.html" target="frame1">personal info</a></li>
 </ul>    
 </body>
 </html>
