--- a/personal_info.html
+++ b/personal_info.html
@@ -53,7 +53,7 @@
     </ul>
     <h3><u>Declaration</u></h3>
     <input type="checkbox" name="" id=""><b>I do hereby declare that the above given information is true to the best of my knowledge.</b>
-    <br><br><a href="education.html">Previous</a>
+    <!-- <br><br><a href="education.html">Previous</a> -->
 
     
 </body>
