--- a/frameset.html
+++ b/frameset.html
@@ -19,7 +19,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Frameset with Inline Styles</title>
+  <title>Frameset</title>
 </head>
 <body style="margin:0; height:100vh; display:flex;">
 
