--- a/education.html
+++ b/education.html
@@ -18,14 +18,14 @@
         <tr>
             <td>1</td>
             <td>Higher Secondary</td>
-            <td>GHSS Areekode</td>
+            <td>NSHSS MANNAR</td>
             <td>2022</td>
             <td>97</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Graduate</td>
-            <td>Sullamussalam Science College Areekode</td>
+            <td>Sree Ayyappa College ,Eramallikkara</td>
             <td>2025</td>
             <td>94</td>
         </tr>
