--- a/personal_info.html
+++ b/personal_info.html
@@ -16,20 +16,21 @@
     <h3><u>Family Details</u></h3>
 <ol type="none">
     <li>
-        <h4>Father:Aboobacker</h4>
+        <h4>Father:Anirudhan V K</h4>
     </li>
     <li>
-        <h4>Mother:Naseera Beegum</h4>
+        <h4>Mother:Sindhu P V</h4>
     </li>
     
     <li>
-        <h4>Siblings: <br>
+        <h4>Sibling: <br>
         <ul>
-       <li>Shameer</li>
+            <li>Arun Narayan V A</li>
+      <!-- <li>Shameer</li>
        <li>Haseel</li>
        <li>Shameem</li>
        <li>Shibili Backer</li>
-       <li>Shahid Rashad</li>
+       <li>Shahid Rashad</li> -->
         </ul></h4>
     </li>
     
