--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
         <table style="text-align: left;">
             <tr>
           <td><i>Name:</i></td>
-                <td>Fathima Shifna</td>
+                <td>Anoop Krishna V A</td>
             </tr>
             <tr>
                 <td><i>Age:</i></td>
@@ -18,11 +18,11 @@
             </tr>
             <tr>
                 <td><i>Address:</i></td>
-                <td>Areekode, Malappuram</td>
+                <td>Mannar,Alappuzha</td>
             </tr>
             <tr>
                 <td><i>Phone No:</i></td>
-                <td>1234567890</td>
+                <td>9876543210</td>
             </tr>
             <!-- <tr>
                 <td></td>
